Cleaning and Documenting the code

--- a/SciCompDemos.ipynb
+++ b/SciCompDemos.ipynb
@@ -956,7 +956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I implemented this as a special case of the diffusion equation, defining the dx term only using finite difference methods."
+    "Here I implemented this as a special case of the diffusion equation, defining the du/dx term only using finite difference methods."
    ]
   },
   {
@@ -1006,7 +1006,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My continaution code is not obviously compatable , instead taking a approach, I produce the following curve "
+    "I did not integrate my finite difference code within my shooting module ,so instead I took the naive approach, which produces the following curve "
    ]
   },
   {
