Further documentation and cleaning

--- a/SciCompDemos.ipynb
+++ b/SciCompDemos.ipynb
@@ -550,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The time taken for the explicit Euler method, without a the implementation of sparse linear algebra , will preform slower than the same function with sparse linear algebra. This is due to the reduced memory demands and the increased speed of the necessary matrix operations."
+    "The time taken for the explicit Euler method, without the implementation of sparse linear algebra , will preform slower than the same function with sparse linear algebra. This is due to the reduced memory demands and the increased speed of the necessary matrix operations."
    ]
   },
   {
